<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

    <ImageView
        android:id="@+id/ivUserProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_name"
        android:textColor="#000103"
        android:id="@+id/tvName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivUserProfile"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_username"
        android:textColor="#76767A"
        android:textSize="12sp"
        android:id="@+id/tvUserName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvName"
        android:layout_toEndOf="@+id/tvName"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_timestamp"
        android:textColor="#76767A"
        android:textSize="12sp"
        android:id="@+id/tvTimeStamp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_content"
        android:textColor="#01171F"
        android:id="@+id/tvTweetContent"
        android:layout_below="@+id/tvName"
        android:layout_toRightOf="@+id/ivUserProfile"
        android:layout_toEndOf="@+id/ivUserProfile" />

</RelativeLayout>
